Add advancedGenres to book search
