# src/routes/search/index.ts
@@ -2,6 +2,7 @@ import { Hono } from 'hono';
 import bookSearchRoutes from './books';
 import globalSearchRoutes from './global';
 import authorSearchRoutes from './authors';
+import advancedGenreRoutes from './advancedGenres';
 import genresSearchRoutes from './genres';
 import regionsSearchRoutes from './regions';
 import allSearchRoutes from './all';
@@ -12,6 +13,7 @@ const searchRoutes = new Hono();
 searchRoutes.route('/', allSearchRoutes);
 searchRoutes.route('/', bookSearchRoutes);
 searchRoutes.route('/', authorSearchRoutes);
+searchRoutes.route('/', advancedGenreRoutes);
 searchRoutes.route('/', genresSearchRoutes);
 searchRoutes.route('/', regionsSearchRoutes);
 searchRoutes.route('/', globalSearchRoutes);
