# src/types/typesense/search.ts
@@ -1,1 +1,1 @@
-export type SearchType = "all" | "texts" | "authors" | "genres";
+export type SearchType = "all" | "texts" | "authors" | "advancedGenres" | "genres";
